--- a/keras_example_beta1.ipynb
+++ b/keras_example_beta1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,6 +19,25 @@
     "from tensorflow import keras\n",
     "print(keras.__version__)\n",
     "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([4 6], shape=(2,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = tf.constant([1, 2])\n",
+    "b = tf.constant([3, 4])\n",
+    "print(a + b)"
    ]
   },
   {
