--- a/keras_example_build_self_layers.ipynb
+++ b/keras_example_build_self_layers.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -31,9 +31,9 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[ 0.17787792 -0.1494039   0.11300604  0.24903065]\n",
-      " [ 0.17787792 -0.1494039   0.11300604  0.24903065]\n",
-      " [ 0.17787792 -0.1494039   0.11300604  0.24903065]], shape=(3, 4), dtype=float32)\n"
+      "[[-0.14850608  0.02952327  0.01521497  0.24282955]\n",
+      " [-0.14850608  0.02952327  0.01521497  0.24282955]\n",
+      " [-0.14850608  0.02952327  0.01521497  0.24282955]], shape=(3, 4), dtype=float32)\n"
      ]
     }
    ],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -72,9 +72,9 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[-0.16302526  0.05993797 -0.07921679  0.00184889]\n",
-      " [-0.16302526  0.05993797 -0.07921679  0.00184889]\n",
-      " [-0.16302526  0.05993797 -0.07921679  0.00184889]], shape=(3, 4), dtype=float32)\n"
+      "[[-0.14427458  0.01830874  0.07907504  0.01994785]\n",
+      " [-0.14427458  0.01830874  0.07907504  0.01994785]\n",
+      " [-0.14427458  0.01830874  0.07907504  0.01994785]], shape=(3, 4), dtype=float32)\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -152,12 +152,12 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[-0.02965911  0.10602401  0.01391463]\n",
-      " [-0.02965911  0.10602401  0.01391463]\n",
-      " [-0.02965911  0.10602401  0.01391463]], shape=(3, 3), dtype=float32)\n",
+      "[[ 0.02168566  0.17378914 -0.00253749]\n",
+      " [ 0.02168566  0.17378914 -0.00253749]\n",
+      " [ 0.02168566  0.17378914 -0.00253749]], shape=(3, 3), dtype=float32)\n",
       "tf.Tensor(\n",
-      "[[ 0.04346284  0.00025035 -0.13805391]\n",
-      " [ 0.04346284  0.00025035 -0.13805391]], shape=(2, 3), dtype=float32)\n"
+      "[[ 0.01057525 -0.04035868  0.05209654]\n",
+      " [ 0.01057525 -0.04035868  0.05209654]], shape=(2, 3), dtype=float32)\n"
      ]
     }
    ],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -273,22 +273,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<tf.Tensor: id=278, shape=(), dtype=float32, numpy=0.0023324077>]\n",
+      "[<tf.Tensor: id=278, shape=(), dtype=float32, numpy=0.002479173>]\n",
       "[<tf.Variable 'outer_layer/dense/kernel:0' shape=(1, 32) dtype=float32, numpy=\n",
-      "array([[-0.30251142,  0.20588982, -0.08923069,  0.11487502, -0.32756907,\n",
-      "         0.22760105, -0.22356343,  0.42352605, -0.3039049 , -0.05919871,\n",
-      "         0.40454525,  0.07163575,  0.36073822, -0.15746298, -0.39769614,\n",
-      "        -0.28534934,  0.29402328,  0.27618158,  0.11438775, -0.3625272 ,\n",
-      "        -0.37997413,  0.3561747 ,  0.21190596, -0.09985122,  0.03751227,\n",
-      "         0.3195575 , -0.23987857,  0.0407868 , -0.2166553 ,  0.33681685,\n",
-      "         0.31482512,  0.2722895 ]], dtype=float32)>, <tf.Variable 'outer_layer/dense/bias:0' shape=(32,) dtype=float32, numpy=\n",
+      "array([[ 0.36982614,  0.15829384,  0.41114604, -0.1738567 , -0.36384574,\n",
+      "        -0.41569725, -0.3653594 , -0.16020256, -0.3764801 , -0.30773857,\n",
+      "        -0.1286354 ,  0.00701469, -0.3177905 ,  0.38692498, -0.0770219 ,\n",
+      "         0.33967847, -0.2363088 , -0.2834754 , -0.37630484, -0.02641556,\n",
+      "         0.28634483,  0.28438884,  0.08040458,  0.21643132,  0.40347278,\n",
+      "        -0.02424791, -0.02258158, -0.0307191 , -0.33047134, -0.1508998 ,\n",
+      "         0.32122374, -0.36606735]], dtype=float32)>, <tf.Variable 'outer_layer/dense/bias:0' shape=(32,) dtype=float32, numpy=\n",
       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
       "      dtype=float32)>]\n"
@@ -311,6 +311,105 @@
     "y = my_layer(tf.zeros((1,1)))\n",
     "print(my_layer.losses) \n",
     "print(my_layer.weights) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable weights: 0\n",
+      "trainable weights: 4\n",
+      "[<tf.Tensor: id=1211, shape=(), dtype=float32, numpy=0.041968748>]\n",
+      "[<tf.Variable 'my_block_dense_norm_relu_drop_relu/dense_15/kernel:0' shape=(64, 32) dtype=float32, numpy=\n",
+      "array([[ 0.05467254,  0.16974711,  0.00301045, ..., -0.17138743,\n",
+      "         0.22536135,  0.19827598],\n",
+      "       [ 0.13767499,  0.11382854,  0.00651169, ...,  0.18844402,\n",
+      "        -0.04664928,  0.18892705],\n",
+      "       [ 0.2296558 ,  0.07903302, -0.13097149, ...,  0.09964603,\n",
+      "        -0.00492388, -0.04274988],\n",
+      "       ...,\n",
+      "       [-0.07860452,  0.19541878, -0.06114101, ..., -0.10381567,\n",
+      "         0.09945786,  0.1345439 ],\n",
+      "       [-0.23823732, -0.09354186,  0.14720261, ..., -0.07961458,\n",
+      "         0.17681861,  0.23255426],\n",
+      "       [ 0.01601791,  0.21351051, -0.06572437, ..., -0.16238868,\n",
+      "        -0.20642775, -0.20408392]], dtype=float32)>, <tf.Variable 'my_block_dense_norm_relu_drop_relu/dense_15/bias:0' shape=(32,) dtype=float32, numpy=\n",
+      "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "      dtype=float32)>, <tf.Variable 'my_block_dense_norm_relu_drop_relu/batch_normalization_8/gamma:0' shape=(32,) dtype=float32, numpy=\n",
+      "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+      "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+      "      dtype=float32)>, <tf.Variable 'my_block_dense_norm_relu_drop_relu/batch_normalization_8/beta:0' shape=(32,) dtype=float32, numpy=\n",
+      "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "      dtype=float32)>, <tf.Variable 'my_block_dense_norm_relu_drop_relu/batch_normalization_8/moving_mean:0' shape=(32,) dtype=float32, numpy=\n",
+      "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "      dtype=float32)>, <tf.Variable 'my_block_dense_norm_relu_drop_relu/batch_normalization_8/moving_variance:0' shape=(32,) dtype=float32, numpy=\n",
+      "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+      "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+      "      dtype=float32)>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#全连接层（无激活函数）->batchnorm->sigma(激活函数)->dropout()\n",
+    "# 如果中间调用了keras网络层，里面的正则化loss也会被加入进来\n",
+    "\n",
+    "\n",
+    "\n",
+    "#2.使用子层递归构建网络层\n",
+    "class MyBlock_dense_norm_relu_drop_relu(layers.Layer):\n",
+    "    def __init__(self):\n",
+    "        super(MyBlock_dense_norm_relu_drop_relu, self).__init__()\n",
+    "        self.dense = layers.Dense(32, kernel_regularizer=tf.keras.regularizers.l2(1e-3))\n",
+    "        self.batch_norm=layers.BatchNormalization()\n",
+    "        self.drop_out=layers.Dropout(0.5)\n",
+    "        \n",
+    "    def call(self, inputs):\n",
+    "        h1 = self.dense(inputs)\n",
+    "        h1 = self.batch_norm(h1) \n",
+    "        h1 = tf.nn.relu(h1)\n",
+    "        h1=self.drop_out(h1)\n",
+    "        h1 = tf.nn.relu(h1)\n",
+    "        return h1\n",
+    "    \n",
+    "my_block = MyBlock_dense_norm_relu_drop_relu()\n",
+    "print('trainable weights:', len(my_block.trainable_weights))\n",
+    "y = my_block(tf.ones(shape=(3, 64)))\n",
+    "# 构建网络在build()里面，所以执行了才有网络\n",
+    "print('trainable weights:', len(my_block.trainable_weights)) \n",
+    "print(my_block.losses) \n",
+    "print(my_block.weights) \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# class dense_norm_Layer_relu(layers.Layer):\n",
+    "\n",
+    "#     def __init__(self):\n",
+    "#         super(dense_norm_Layer_relu, self).__init__()\n",
+    "#         self.dense = layers.Dense(32, kernel_regularizer=tf.keras.regularizers.l2(1e-3))\n",
+    "# #         self.batch_norm=layers.BatchNormalization(self.dense)\n",
+    "    \n",
+    "#     def call(self, inputs):\n",
+    "# #          h1 = self.batch_norm(inputs)\n",
+    "#          h1=self.dense(inputs)\n",
+    "\n",
+    "# #          h1=layers.BatchNormalization(h1)\n",
+    "#          h1 = tf.nn.relu(h1)\n",
+    "#          return h1\n",
+    "\n",
+    "\n",
+    "# my_layer = dense_norm_Layer_relu()\n",
+    "# y = my_layer(tf.zeros((1,1)))\n",
+    "# print(my_layer.losses) \n",
+    "# print(my_layer.weights) "
    ]
   },
   {
