--- a/keras_examples_gpu.ipynb
+++ b/keras_examples_gpu.ipynb
@@ -14,6 +14,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.debugging.set_log_device_placement(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +62,8 @@
     }
    ],
    "source": [
+    "\n",
+    "##放在log日志之后是可以的\n",
     "# The second method is to configure a virtual GPU device with \n",
     "# tf.config.experimental.set_virtual_device_configuration \n",
     "# and set a hard limit on the total memory to allocate on the GPU.\n",
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +143,32 @@
     "    c = tf.matmul(a, b)\n",
     "except RuntimeError as e:\n",
     "  print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing op MatMul in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "tf.Tensor(\n",
+      "[[22. 28.]\n",
+      " [49. 64.]], shape=(2, 2), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Create some tensors\n",
+    "a = tf.constant([[1.0, 2.0, 3.0], [4.0, 5.0, 6.0]])\n",
+    "b = tf.constant([[1.0, 2.0], [3.0, 4.0], [5.0, 6.0]])\n",
+    "c = tf.matmul(a, b)\n",
+    "\n",
+    "print(c)"
    ]
   },
   {
