--- a/keras_example_load_data_texts.ipynb
+++ b/keras_example_load_data_texts.ipynb
@@ -61,6 +61,7 @@
     "DIRECTORY_URL = 'https://storage.googleapis.com/download.tensorflow.org/data/illiad/'\n",
     "FILE_NAMES = ['cowper.txt', 'derby.txt', 'butler.txt']\n",
     "\n",
+    "##download data to '/root/.keras/datasets'\n",
     "for name in FILE_NAMES:\n",
     "  text_dir = tf.keras.utils.get_file(name, origin=DIRECTORY_URL+name)\n",
     "  \n",
@@ -330,9 +331,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##train除了skip跳过的数据，剩下的都是的\n",
     "train_data = all_encoded_data.skip(TAKE_SIZE).shuffle(BUFFER_SIZE)\n",
     "train_data = train_data.padded_batch(BATCH_SIZE, padded_shapes=([-1],[]))\n",
     "\n",
+    "#test只取前TAKE_SIZE数据\n",
     "test_data = all_encoded_data.take(TAKE_SIZE)\n",
     "test_data = test_data.padded_batch(BATCH_SIZE, padded_shapes=([-1],[]))"
    ]
