--- a/keras_example_transformer_stuct.ipynb
+++ b/keras_example_transformer_stuct.ipynb
@@ -1580,7 +1580,110 @@
       "Epoch 1 Batch 150 Loss 4.6594 Accuracy 0.0250\n",
       "Epoch 1 Batch 155 Loss 4.6422 Accuracy 0.0251\n",
       "Epoch 1 Batch 160 Loss 4.6500 Accuracy 0.0253\n",
-      "Epoch 1 Batch 165 Loss 4.6358 Accuracy 0.0254\n"
+      "Epoch 1 Batch 165 Loss 4.6358 Accuracy 0.0254\n",
+      "Epoch 1 Batch 170 Loss 4.6249 Accuracy 0.0255\n",
+      "Epoch 1 Batch 175 Loss 4.6166 Accuracy 0.0257\n",
+      "Epoch 1 Batch 180 Loss 4.5983 Accuracy 0.0258\n",
+      "Epoch 1 Batch 185 Loss 4.5978 Accuracy 0.0259\n",
+      "Epoch 1 Batch 190 Loss 4.5952 Accuracy 0.0261\n",
+      "Epoch 1 Batch 195 Loss 4.5903 Accuracy 0.0262\n",
+      "Epoch 1 Batch 200 Loss 4.5822 Accuracy 0.0263\n",
+      "Epoch 1 Batch 205 Loss 4.5673 Accuracy 0.0264\n",
+      "Epoch 1 Batch 210 Loss 4.5585 Accuracy 0.0265\n",
+      "Epoch 1 Batch 215 Loss 4.5605 Accuracy 0.0266\n",
+      "Epoch 1 Batch 220 Loss 4.5521 Accuracy 0.0267\n",
+      "Epoch 1 Batch 225 Loss 4.5436 Accuracy 0.0268\n",
+      "Epoch 1 Batch 230 Loss 4.5250 Accuracy 0.0268\n",
+      "Epoch 1 Batch 235 Loss 4.5195 Accuracy 0.0269\n",
+      "Epoch 1 Batch 240 Loss 4.5087 Accuracy 0.0270\n",
+      "Epoch 1 Batch 245 Loss 4.4928 Accuracy 0.0270\n",
+      "Epoch 1 Batch 250 Loss 4.4835 Accuracy 0.0271\n",
+      "Epoch 1 Batch 255 Loss 4.4641 Accuracy 0.0271\n",
+      "Epoch 1 Batch 260 Loss 4.4586 Accuracy 0.0271\n",
+      "Epoch 1 Batch 265 Loss 4.4466 Accuracy 0.0272\n",
+      "Epoch 1 Batch 270 Loss 4.4317 Accuracy 0.0272\n",
+      "Epoch 1 Batch 275 Loss 4.4261 Accuracy 0.0273\n",
+      "Epoch 1 Batch 280 Loss 4.4143 Accuracy 0.0274\n",
+      "Epoch 1 Batch 285 Loss 4.4023 Accuracy 0.0274\n",
+      "Epoch 1 Batch 290 Loss 4.3936 Accuracy 0.0275\n",
+      "Epoch 1 Batch 295 Loss 4.3861 Accuracy 0.0276\n",
+      "Epoch 1 Batch 300 Loss 4.3806 Accuracy 0.0278\n",
+      "Epoch 1 Batch 305 Loss 4.3737 Accuracy 0.0280\n",
+      "Epoch 1 Batch 310 Loss 4.3588 Accuracy 0.0282\n",
+      "Epoch 1 Batch 315 Loss 4.3478 Accuracy 0.0285\n",
+      "Epoch 1 Batch 320 Loss 4.3386 Accuracy 0.0289\n",
+      "Epoch 1 Batch 325 Loss 4.3283 Accuracy 0.0292\n",
+      "Epoch 1 Batch 330 Loss 4.3137 Accuracy 0.0295\n",
+      "Epoch 1 Batch 335 Loss 4.2997 Accuracy 0.0298\n",
+      "Epoch 1 Batch 340 Loss 4.2920 Accuracy 0.0301\n",
+      "Epoch 1 Batch 345 Loss 4.2840 Accuracy 0.0305\n",
+      "Epoch 1 Batch 350 Loss 4.2728 Accuracy 0.0308\n",
+      "Epoch 1 Batch 355 Loss 4.2588 Accuracy 0.0312\n",
+      "Epoch 1 Batch 360 Loss 4.2475 Accuracy 0.0315\n",
+      "Epoch 1 Batch 365 Loss 4.2414 Accuracy 0.0319\n",
+      "Epoch 1 Batch 370 Loss 4.2272 Accuracy 0.0322\n",
+      "Epoch 1 Batch 375 Loss 4.2176 Accuracy 0.0325\n",
+      "Epoch 1 Batch 380 Loss 4.2094 Accuracy 0.0329\n",
+      "Epoch 1 Batch 385 Loss 4.1977 Accuracy 0.0332\n",
+      "Epoch 1 Batch 390 Loss 4.1866 Accuracy 0.0334\n",
+      "Epoch 1 Batch 395 Loss 4.1775 Accuracy 0.0337\n",
+      "Epoch 1 Batch 400 Loss 4.1688 Accuracy 0.0340\n",
+      "Epoch 1 Batch 405 Loss 4.1597 Accuracy 0.0342\n",
+      "Epoch 1 Batch 410 Loss 4.1493 Accuracy 0.0345\n",
+      "Epoch 1 Batch 415 Loss 4.1431 Accuracy 0.0348\n",
+      "Epoch 1 Batch 420 Loss 4.1383 Accuracy 0.0351\n",
+      "Epoch 1 Batch 425 Loss 4.1293 Accuracy 0.0353\n",
+      "Epoch 1 Batch 430 Loss 4.1237 Accuracy 0.0356\n",
+      "Epoch 1 Batch 435 Loss 4.1162 Accuracy 0.0359\n",
+      "Epoch 1 Batch 440 Loss 4.1065 Accuracy 0.0362\n",
+      "Epoch 1 Batch 445 Loss 4.0993 Accuracy 0.0366\n",
+      "Epoch 1 Batch 450 Loss 4.0937 Accuracy 0.0369\n",
+      "Epoch 1 Batch 455 Loss 4.0852 Accuracy 0.0372\n",
+      "Epoch 1 Batch 460 Loss 4.0800 Accuracy 0.0375\n",
+      "Epoch 1 Batch 465 Loss 4.0725 Accuracy 0.0379\n",
+      "Epoch 1 Batch 470 Loss 4.0658 Accuracy 0.0382\n",
+      "Epoch 1 Batch 475 Loss 4.0564 Accuracy 0.0385\n",
+      "Epoch 1 Batch 480 Loss 4.0513 Accuracy 0.0389\n",
+      "Epoch 1 Batch 485 Loss 4.0453 Accuracy 0.0392\n",
+      "Epoch 1 Batch 490 Loss 4.0386 Accuracy 0.0395\n",
+      "Epoch 1 Batch 495 Loss 4.0303 Accuracy 0.0397\n",
+      "Epoch 1 Batch 500 Loss 4.0202 Accuracy 0.0400\n",
+      "Epoch 1 Batch 505 Loss 4.0120 Accuracy 0.0403\n",
+      "Epoch 1 Batch 510 Loss 4.0039 Accuracy 0.0405\n",
+      "Epoch 1 Batch 515 Loss 3.9962 Accuracy 0.0408\n",
+      "Epoch 1 Batch 520 Loss 3.9867 Accuracy 0.0410\n",
+      "Epoch 1 Batch 525 Loss 3.9796 Accuracy 0.0413\n",
+      "Epoch 1 Batch 530 Loss 3.9720 Accuracy 0.0415\n",
+      "Epoch 1 Batch 535 Loss 3.9643 Accuracy 0.0418\n",
+      "Epoch 1 Batch 540 Loss 3.9573 Accuracy 0.0421\n",
+      "Epoch 1 Batch 545 Loss 3.9496 Accuracy 0.0423\n",
+      "Epoch 1 Batch 550 Loss 3.9443 Accuracy 0.0425\n",
+      "Epoch 1 Batch 555 Loss 3.9368 Accuracy 0.0428\n",
+      "Epoch 1 Batch 560 Loss 3.9328 Accuracy 0.0431\n",
+      "Epoch 1 Batch 565 Loss 3.9279 Accuracy 0.0433\n",
+      "Epoch 1 Batch 570 Loss 3.9238 Accuracy 0.0435\n",
+      "Epoch 1 Batch 575 Loss 3.9175 Accuracy 0.0437\n",
+      "Epoch 1 Batch 580 Loss 3.9124 Accuracy 0.0440\n",
+      "Epoch 1 Batch 585 Loss 3.9086 Accuracy 0.0443\n",
+      "Epoch 1 Batch 590 Loss 3.9015 Accuracy 0.0446\n",
+      "Epoch 1 Batch 595 Loss 3.8935 Accuracy 0.0447\n",
+      "Epoch 1 Batch 600 Loss 3.8870 Accuracy 0.0450\n",
+      "Epoch 1 Batch 605 Loss 3.8824 Accuracy 0.0452\n",
+      "Epoch 1 Batch 610 Loss 3.8766 Accuracy 0.0454\n",
+      "Epoch 1 Batch 615 Loss 3.8721 Accuracy 0.0457\n",
+      "Epoch 1 Batch 620 Loss 3.8669 Accuracy 0.0460\n",
+      "Epoch 1 Batch 625 Loss 3.8630 Accuracy 0.0463\n",
+      "Epoch 1 Batch 630 Loss 3.8575 Accuracy 0.0466\n",
+      "Epoch 1 Batch 635 Loss 3.8509 Accuracy 0.0469\n",
+      "Epoch 1 Batch 640 Loss 3.8479 Accuracy 0.0471\n",
+      "Epoch 1 Batch 645 Loss 3.8418 Accuracy 0.0474\n",
+      "Epoch 1 Batch 650 Loss 3.8370 Accuracy 0.0476\n",
+      "Epoch 1 Batch 655 Loss 3.8305 Accuracy 0.0479\n",
+      "Epoch 1 Batch 660 Loss 3.8254 Accuracy 0.0482\n",
+      "Epoch 1 Batch 665 Loss 3.8208 Accuracy 0.0485\n",
+      "Epoch 1 Batch 670 Loss 3.8147 Accuracy 0.0488\n",
+      "Epoch 1 Batch 675 Loss 3.8077 Accuracy 0.0491\n",
+      "Epoch 1 Batch 680 Loss 3.8029 Accuracy 0.0493\n"
      ]
     }
    ],
